# LingShu

./: .env.example  .gitignore  AI-PersonalAssistant-PRD-Review-Round2.md  AI-PersonalAssistant-PRD-Review-Round3.md  AI-PersonalAssistant-PRD-Review-Round4.md  AI-PersonalAssistant-PRD-Review.md  AI-PersonalAssistant-PRD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  config.example.toml  openapi.json  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: ci.yml  docker-build.yml  release.yml
crates/lingshu-graph/: Cargo.toml
crates/lingshu-graph/src/: queries.rs
crates/lingshu-server/: Cargo.toml  Dockerfile  Dockerfile.dev  build.rs
crates/lingshu-server/migrations/: 20260528000003_create_projects_table.sql  20260528000004_create_project_members_table.sql  20260528000008_create_messages_table.sql  20260528000009_create_memories_table.sql  20260528000010_create_integrations_table.sql  20260528_000002_create_users_table.sql  20260528_000005_create_tasks_table.sql  20260528_000006_create_task_dependencies_table.sql  20260528_000007_create_conversations_table.sql  20260528_000011_create_audit_log_table.sql  20260604000012_create_personality_snapshots_table.sql  20260604000013_create_thought_queue_table.sql  20260604000014_create_calendar_events_table.sql  20260607000015_create_signal_events_table.sql  20260607000016_close_integrations_null_project_unique_gap.sql  20260608000017_fix_thought_queue_status.sql  20260608000018_add_memory_tier_and_source.sql  20260608000019_add_external_event_id.sql  20260608000020_add_role_prompt_to_users.sql  20260609000021_add_llm_settings_to_users.sql  20260609000022_add_permissions_to_users.sql
crates/lingshu-server/src/: auth.rs  cache.rs  config.rs  crypto.rs  error.rs  main.rs  patch.rs  state.rs  telemetry.rs  tests_integration.rs
crates/lingshu-server/src/db/: projects.rs  tasks.rs  users.rs
crates/lingshu-server/src/llm/: client.rs  consolidation.rs  dedup.rs  forgetting.rs  memory.rs  mod.rs  ollama.rs  personality.rs  prompts.rs  router.rs  semantic.rs  thoughts.rs
crates/lingshu-server/src/models/: audit_log.rs  calendar.rs  conversation.rs  integration.rs  memory.rs  message.rs  mod.rs  personality.rs  project.rs  project_member.rs  task.rs  task_dependency.rs  thought.rs  user.rs
crates/lingshu-server/src/routes/: audit.rs  auth.rs  calendar.rs  chat.rs  conversations.rs  integrations.rs  memories.rs  mod.rs  permissions.rs  personality.rs  project_members.rs  projects.rs  sessions.rs  settings.rs  signals.rs  system.rs  task_dependencies.rs  tasks.rs  thoughts.rs  users.rs
crates/lingshu-server/src/ws/: handler.rs  mod.rs
crates/lingshu-vector/: Cargo.toml
crates/lingshu-vector/src/: search.rs
docker/: docker-compose.dev.yml
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docker/redis/: redis.conf
docs/: README.md  mvp-status.md  pet-character-design.md  review-findings.md  soulledger-design-decisions.md
docs/superpowers/specs/: 2026-06-12-lingshu-module-linkage-design.md
frontend/: Dockerfile  Dockerfile.dev  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  pet.html  vite.config.ts
frontend/public/live2d/: README.md
frontend/src/: App.tsx  index.css  pet.tsx
frontend/src/components/avatar/: AvatarControlPanel.tsx  AvatarPlaceholder.tsx  PetDialogReply.tsx  PetWindow.tsx  avatarControls.ts  petPresentation.ts  petScale.ts
frontend/src/components/avatar/__tests__/: PetDialogReply.test.tsx  avatarControls.test.ts  petPresentation.test.ts  petScale.test.ts
frontend/src/components/calendar/: CalendarPanel.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatSettings.tsx  ChatWindow.tsx  MarkdownContent.tsx  MessageBubble.tsx  RolePromptSettings.tsx  chatScroll.ts
frontend/src/components/chat/__tests__/: MarkdownContent.test.tsx  MessageBubble.test.tsx  chatScroll.test.ts
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/memory/: MemoryCenter.tsx
frontend/src/components/personality/: PersonalityCenter.tsx
frontend/src/components/projects/: ProjectManager.tsx
frontend/src/components/settings/: PermissionSettings.tsx
frontend/src/components/thoughts/: ThoughtQueue.tsx
frontend/src/components/workspace/: WorkspacePage.tsx
frontend/src/lib/: api.ts  automation.ts  eventkit.ts  tauri.ts
frontend/src/lib/__tests__/: api.test.ts  automation.test.ts  eventkit.test.ts  tauri.test.ts
frontend/src/stores/: chatStore.ts  memoryStore.ts  projectStore.ts
frontend/src/stores/__tests__/: chatStore.test.ts  memoryStore.test.ts  projectStore.test.ts
frontend/src/test/: setup.ts
poc/poc-age-graph/: README.md  docker-compose.yml  init.sql  queries.cypher
poc/poc-llm-streaming/: Cargo.toml  README.md
poc/poc-llm-streaming/src/: main.rs
poc/poc-qdrant-search/: Cargo.toml  README.md  docker-compose.yml
poc/poc-qdrant-search/src/: main.rs
scripts/: build-sidecar.sh  setup-dev.ps1
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: automation.rs  eventkit.rs  fileio.rs  main.rs  screenreader.rs
