[package]
name = "lingshu-tauri"
version = "0.1.0"
description = "灵枢 (LingShu) — macOS Desktop AI Assistant"
edition = "2021"
license = "MIT"

# NOT part of the root cargo workspace — Tauri pulls its own tokio & deps
# to avoid version conflicts with the axum backend. Build with:
#   cd src-tauri && cargo build
# or via the Tauri CLI (from frontend/):
#   npm run tauri dev / npm run tauri build
[workspace]

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "time"] }

# macOS EventKit bridge (Phase B)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-event-kit = "0.3"
block2 = "0.6"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
