[package]
name = "lingshu-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lingshu-server"
path = "src/main.rs"

[dependencies]
# Workspace deps
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
sqlx = { workspace = true }
fred = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
prometheus-client = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

dotenvy = "0.15"

# Internal crates
lingshu-vector = { path = "../lingshu-vector" }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
